[package]
name = "async_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rayon = "1.7.0"
serde = { version = "1.0.180", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

 [dependencies.async-std]
 version = "1.12.0"
 features = ["attributes"]

